# demo-datasets

./: .gitignore  README.md  pyproject.toml
data/executive_orders/: clusters.csv  coalesced_clusters.json  executive_orders.csv  hdbscan_nomic.txt  links.csv  masked_log.csv  political_bias_log.csv  presidents.csv  reaction_sentiment_log.csv  refined_clusters.json  sentiment.csv  sentiment_log.csv  terms.csv
data/executive_orders/cleaned/: executive-order-1.json  executive-order-10002-exemption-lawrence-m-lawson-from-compulsory-retirement-for-age.json  executive-order-10014-directing-federal-agencies-cooperate-with-sate-and-local-authorities.json  executive-order-10017-amendment-the-regulations-governing-the-appointment-postmasters-the.json  executive-order-10018-transferring-the-control-and-jurisdiction-over-certain-tracts-land.json  executive-order-10026-korea.json  (+2399 more)
data/processed/: state_gov_procurement_forecast.csv
data/sf_rent/: rent_board_inventory.parquet
data/state_gov_procurement_forecast/: state_gov_procurement_forecast.parquet
notebooks/: SFRent.ipynb  SFRentBoard.ipynb  Setup.ipynb  StateDeptProcurementForecast.ipynb
notebooks/executive_orders/: ExecutiveOrderAnalysis.ipynb  ExecutiveOrderCleanup.ipynb  ExecutiveOrderDataset.ipynb  ExecutiveOrderEmbedding.ipynb  ExecutiveOrderScraping.ipynb  ExecutiveOrderSentiment.ipynb  ExecutiveOrderTagging.ipynb
notebooks/processing/: ExecutiveOrderCleanup.ipynb  ExecutiveOrderEmbedding.ipynb  ExecutiveOrderScraping.ipynb  ExecutiveOrderSentiment.ipynb  H1B2024.ipynb  StateDeptProcurementForecast.ipynb
(+50523 files in other folders)
