[tool.poetry]
name = "demo-datasets"
version = "0.1.0"
description = ""
authors = ["zuyezheng <zuyezheng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
polars = "^1.9.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyarrow = "^19.0.1"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
