[tool.poetry]
name = "demo-datasets"
version = "0.1.0"
description = ""
authors = ["zuyezheng <zuyezheng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
polars = "^1.9.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyarrow = "^19.0.1"
beautifulsoup4 = "^4.13.3"
sentence-transformers = "^3.4.1"
transformers = "^4.49.0"
torch = "^2.6.0"
ipywidgets = "^8.1.5"
accelerate = "^1.4.0"
langchain-openai = "^0.3.7"
langchain-google-genai = "^2.0.11"
langchain-ollama = "^0.2.3"
langchain = "^0.3.20"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
